# gemini-ocr

./: .gitignore  LICENSE  README.md  check.md  fuzzy_match.py  harmonization.py  main.py  postcapitalist-desire.md  printable.py  prompts.py  pyproject.toml  split.py  utils.py
.ipynb_checkpoints/: main-checkpoint.py
tests/: run_tests.py  test_harmonization.py  test_utils.py
